fix: remove padding and overflow on body

--- a/wondrous-app/services/stylesheets/body.css
+++ b/wondrous-app/services/stylesheets/body.css
@@ -32,3 +32,11 @@
 	font-style: normal;
 	src: url('./FaktumBold.otf');
 }
+
+html,
+body {
+	overflow-x: hidden;
+	background-color: #0d0738;
+	padding: 0;
+	margin: 0;
+}
